force-app/main/default/objects/Account/fields/Age_of_Customer__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Customer__c</fullName>
    <formula>FLOOR((TODAY()- Birth_Date__c +1)/365.2425)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age of Customer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>