force-app/main/default/objects/Account/fields/Alternate_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Mobile_No__c</fullName>
    <label>Alternate Mobile No</label>
    <type>Phone</type>
</CustomField>