force-app/main/default/objects/Account/fields/Anrock_LeadStatus__c.field-meta.xml
<CustomField>
    <fullName>Anrock_LeadStatus__c</fullName>
    <label>Anrock LeadStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fresh</fullName>
            </value>
            <value>
                <fullName>Claimed</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Meeting Done</fullName>
            </value>
            <value>
                <fullName>Visit Done</fullName>
            </value>
            <value>
                <fullName>Final Negotiation</fullName>
            </value>
            <value>
                <fullName>Booking Done</fullName>
            </value>
            <value>
                <fullName>Junk</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>