force-app/main/default/objects/Account/fields/Birth_date_of_2nd_child__c.field-meta.xml
<CustomField>
    <fullName>Birth_date_of_2nd_child__c</fullName>
    <label>Birth date of 2nd child</label>
    <type>Date</type>
</CustomField>