force-app/main/default/objects/Account/fields/Booked_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Booked_Opportunities__c</fullName>
    <label>Booked Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Unit Booked</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>