force-app/main/default/objects/Account/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner</label>
    <referenceTo>Broker__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>