force-app/main/default/objects/Account/fields/Channel_Partner_Activated__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Channel Partner Portal Activated</label>
    <type>Checkbox</type>
</CustomField>