force-app/main/default/objects/Account/fields/Club_memberships_If_any__c.field-meta.xml
<CustomField>
    <fullName>Club_memberships_If_any__c</fullName>
    <label>Club memberships (If any)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>