force-app/main/default/objects/Account/fields/Contact_Number_Father__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number_Father__c</fullName>
    <label>Contact Number Father</label>
    <length>20</length>
    <type>Text</type>
</CustomField>