force-app/main/default/objects/Account/fields/Contact_Number_Mother__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number_Mother__c</fullName>
    <label>Contact Number Mother</label>
    <length>20</length>
    <type>Text</type>
</CustomField>