force-app/main/default/objects/Account/fields/Contact_Number_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number_Spouse__c</fullName>
    <label>Contact Number Spouse</label>
    <length>20</length>
    <type>Text</type>
</CustomField>