force-app/main/default/objects/Account/fields/Corporate__c.field-meta.xml
<CustomField>
    <fullName>Corporate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate</label>
    <referenceTo>Corporates__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>