force-app/main/default/objects/Account/fields/Country_Code_2__c.field-meta.xml
<CustomField>
    <fullName>Country_Code_2__c</fullName>
    <label>Country Code 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>+1</fullName>
            </value>
            <value>
                <fullName>+213</fullName>
            </value>
            <value>
                <fullName>+244</fullName>
            </value>
            <value>
                <fullName>+355</fullName>
            </value>
            <value>
                <fullName>+376</fullName>
            </value>
            <value>
                <fullName>+44</fullName>
            </value>
            <value>
                <fullName>+65</fullName>
            </value>
            <value>
                <fullName>+91</fullName>
            </value>
            <value>
                <fullName>+93</fullName>
            </value>
            <value>
                <fullName>+968</fullName>
            </value>
            <value>
                <fullName>+97</fullName>
            </value>
            <value>
                <fullName>+971</fullName>
            </value>
            <value>
                <fullName>+972</fullName>
            </value>
            <value>
                <fullName>+974</fullName>
            </value>
            <value>
                <fullName>+973</fullName>
            </value>
            <value>
                <fullName>+49</fullName>
            </value>
            <value>
                <fullName>+61</fullName>
            </value>
            <value>
                <fullName>+1-267</fullName>
            </value>
            <value>
                <fullName>+81</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>