force-app/main/default/objects/Account/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>+1</fullName>
            </value>
            <value>
                <fullName>+1-242</fullName>
            </value>
            <value>
                <fullName>+1-246</fullName>
            </value>
            <value>
                <fullName>+1-264</fullName>
            </value>
            <value>
                <fullName>+1-268</fullName>
            </value>
            <value>
                <fullName>+1-284</fullName>
            </value>
            <value>
                <fullName>+1-340</fullName>
            </value>
            <value>
                <fullName>+1-345</fullName>
            </value>
            <value>
                <fullName>+1-441</fullName>
            </value>
            <value>
                <fullName>+1-473</fullName>
            </value>
            <value>
                <fullName>+1-649</fullName>
            </value>
            <value>
                <fullName>+1-664</fullName>
            </value>
            <value>
                <fullName>+1-670</fullName>
            </value>
            <value>
                <fullName>+1-671</fullName>
            </value>
            <value>
                <fullName>+1-684</fullName>
            </value>
            <value>
                <fullName>+1-758</fullName>
            </value>
            <value>
                <fullName>+1-767</fullName>
            </value>
            <value>
                <fullName>+1-784</fullName>
            </value>
            <value>
                <fullName>+1-787 or +1-939</fullName>
            </value>
            <value>
                <fullName>+1-809 and +1-829</fullName>
            </value>
            <value>
                <fullName>+1-868</fullName>
            </value>
            <value>
                <fullName>+1-869</fullName>
            </value>
            <value>
                <fullName>+1-876</fullName>
            </value>
            <value>
                <fullName>+20</fullName>
            </value>
            <value>
                <fullName>+212</fullName>
            </value>
            <value>
                <fullName>+213</fullName>
            </value>
            <value>
                <fullName>+216</fullName>
            </value>
            <value>
                <fullName>+218</fullName>
            </value>
            <value>
                <fullName>+220</fullName>
            </value>
            <value>
                <fullName>+221</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>