force-app/main/default/objects/Account/fields/Current_Residential_Address__c.field-meta.xml
<CustomField>
    <fullName>Current_Residential_Address__c</fullName>
    <label>Current Residential Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>