force-app/main/default/objects/Account/fields/DND__c.field-meta.xml
<CustomField>
    <fullName>DND__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DND</label>
    <type>Checkbox</type>
</CustomField>