force-app/main/default/objects/Account/fields/Email_id_Child_1__c.field-meta.xml
<CustomField>
    <fullName>Email_id_Child_1__c</fullName>
    <label>Email id – Child 1</label>
    <type>Email</type>
</CustomField>