force-app/main/default/objects/Account/fields/Email_id_Child_2__c.field-meta.xml
<CustomField>
    <fullName>Email_id_Child_2__c</fullName>
    <label>Email id – Child 2</label>
    <type>Email</type>
</CustomField>