force-app/main/default/objects/Account/fields/Email_id_Father__c.field-meta.xml
<CustomField>
    <fullName>Email_id_Father__c</fullName>
    <label>Email id – Father</label>
    <type>Email</type>
</CustomField>