force-app/main/default/objects/Account/fields/Email_id_Mother__c.field-meta.xml
<CustomField>
    <fullName>Email_id_Mother__c</fullName>
    <label>Email id – Mother</label>
    <type>Email</type>
</CustomField>