force-app/main/default/objects/Account/fields/Email_id_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Email_id_Spouse__c</fullName>
    <label>Email id – Spouse</label>
    <type>Email</type>
</CustomField>