force-app/main/default/objects/Account/fields/Event_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Time__c</fullName>
    <label>Event Start Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>