force-app/main/default/objects/Account/fields/Family_Income__c.field-meta.xml
<CustomField>
    <fullName>Family_Income__c</fullName>
    <label>Yearly Family Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upto 50 Lacs</fullName>
            </value>
            <value>
                <fullName>&gt; 50 Lacs To 1 Cr.</fullName>
            </value>
            <value>
                <fullName>&gt; 1 Cr. To 5 Cr.</fullName>
            </value>
            <value>
                <fullName>&gt; 5 Cr. To 10 Cr.</fullName>
            </value>
            <value>
                <fullName>&gt; 10 Cr.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>