force-app/main/default/objects/Account/fields/Father_s_birth_date__c.field-meta.xml
<CustomField>
    <fullName>Father_s_birth_date__c</fullName>
    <label>Father’s birth date</label>
    <type>Date</type>
</CustomField>