force-app/main/default/objects/Account/fields/gupshupcrm__WhatsApp_Global_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__WhatsApp_Global_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gupshup Global Opt In</label>
    <type>Checkbox</type>
</CustomField>