force-app/main/default/objects/Account/fields/Income_Bracket_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Income_Bracket_Per_Month__c</fullName>
    <label>Income Bracket (Per Month)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 50k</fullName>
            </value>
            <value>
                <fullName>50k to 75k</fullName>
            </value>
            <value>
                <fullName>75k to 1 Lac</fullName>
            </value>
            <value>
                <fullName>1 Lac to 1.50 Lac</fullName>
            </value>
            <value>
                <fullName>1.50 Lac to 2 Lac</fullName>
            </value>
            <value>
                <fullName>2 Lac to 3 Lac</fullName>
            </value>
            <value>
                <fullName>Greater than 3 Lac</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>