force-app/main/default/objects/Account/fields/Is_serviced__c.field-meta.xml
<CustomField>
    <fullName>Is_serviced__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is serviced</label>
    <type>Checkbox</type>
</CustomField>