force-app/main/default/objects/Account/fields/Last_Sales_Call_Attemp_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Call_Attemp_Date__c</fullName>
    <label>Last Sales Call Attemp Date</label>
    <type>DateTime</type>
</CustomField>