force-app/main/default/objects/Account/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Employee / Management Reference</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Exhibitions</fullName>
            </value>
            <value>
                <fullName>Hoarding</fullName>
            </value>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>Individual Calling</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>NRI</fullName>
            </value>
            <value>
                <fullName>Other Media</fullName>
            </value>
            <value>
                <fullName>Outstation</fullName>
            </value>
            <value>
                <fullName>Presales</fullName>
                <label>PreSales</label>
            </value>
            <value>
                <fullName>Print Magzines</fullName>
            </value>
            <value>
                <fullName>Print Newspaper</fullName>
            </value>
            <value>
                <fullName>Property Portals</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Surround Marketing</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>