force-app/main/default/objects/Account/fields/Locality__c.field-meta.xml
<CustomField>
    <fullName>Locality__c</fullName>
    <label>Locality(New)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airoli</fullName>
            </value>
            <value>
                <fullName>Ambernath</fullName>
            </value>
            <value>
                <fullName>Ambivali</fullName>
            </value>
            <value>
                <fullName>Andheri</fullName>
            </value>
            <value>
                <fullName>Asangaon</fullName>
            </value>
            <value>
                <fullName>Badlapur</fullName>
            </value>
            <value>
                <fullName>Bandra</fullName>
            </value>
            <value>
                <fullName>Belapur</fullName>
            </value>
            <value>
                <fullName>Bhandup</fullName>
            </value>
            <value>
                <fullName>Bhayander</fullName>
            </value>
            <value>
                <fullName>Bhivpuri Road</fullName>
            </value>
            <value>
                <fullName>Bhiwandi</fullName>
            </value>
            <value>
                <fullName>Borivali</fullName>
            </value>
            <value>
                <fullName>Byculla</fullName>
            </value>
            <value>
                <fullName>Chandivali</fullName>
            </value>
            <value>
                <fullName>Charni Road</fullName>
            </value>
            <value>
                <fullName>Chembur</fullName>
            </value>
            <value>
                <fullName>Chinchpokli</fullName>
            </value>
            <value>
                <fullName>Chunabatti</fullName>
            </value>
            <value>
                <fullName>Churchgate</fullName>
            </value>
            <value>
                <fullName>Dadar</fullName>
            </value>
            <value>
                <fullName>Dahisar</fullName>
            </value>
            <value>
                <fullName>Diva</fullName>
            </value>
            <value>
                <fullName>Dockyard</fullName>
            </value>
            <value>
                <fullName>Dombivali</fullName>
            </value>
            <value>
                <fullName>Elphinston Road</fullName>
            </value>
            <value>
                <fullName>Fort</fullName>
            </value>
            <value>
                <fullName>Ghatkopar</fullName>
            </value>
            <value>
                <fullName>Girgaon</fullName>
            </value>
            <value>
                <fullName>Goregaon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>