force-app/main/default/objects/Account/fields/Lockated_User_Custom_Device_ID__c.field-meta.xml
<CustomField>
    <fullName>Lockated_User_Custom_Device_ID__c</fullName>
    <label>Lockated User - Custom Device ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>