force-app/main/default/objects/Account/fields/Lockated_User_Customer__c.field-meta.xml
<CustomField>
    <fullName>Lockated_User_Customer__c</fullName>
    <label>Lockated User - Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>