force-app/main/default/objects/Account/fields/Lockated_User_FCM_ID_Action__c.field-meta.xml
<CustomField>
    <fullName>Lockated_User_FCM_ID_Action__c</fullName>
    <label>Lockated User - FCM ID Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>