force-app/main/default/objects/Account/fields/Lockated_User_Model__c.field-meta.xml
<CustomField>
    <fullName>Lockated_User_Model__c</fullName>
    <label>Lockated User - Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>