force-app/main/default/objects/Account/fields/Lockated_User_OS_Version__c.field-meta.xml
<CustomField>
    <fullName>Lockated_User_OS_Version__c</fullName>
    <label>Lockated User - OS Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>