force-app/main/default/objects/Account/fields/Lockated_User_Source__c.field-meta.xml
<CustomField>
    <fullName>Lockated_User_Source__c</fullName>
    <label>Lockated_User - Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>