force-app/main/default/objects/Account/fields/Lockated_User_Type_A_I__c.field-meta.xml
<CustomField>
    <fullName>Lockated_User_Type_A_I__c</fullName>
    <label>Lockated User - Type A &amp; I</label>
    <length>255</length>
    <type>Text</type>
</CustomField>