force-app/main/default/objects/Account/fields/locobuzz__Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Alternate_Email__c</fullName>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>