force-app/main/default/objects/Account/fields/locobuzz__Link__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Link__c</fullName>
    <label>Link</label>
    <type>Url</type>
</CustomField>