force-app/main/default/objects/Account/fields/locobuzz__Party_ID__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Party_ID__c</fullName>
    <label>Party ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>