force-app/main/default/objects/Account/fields/locobuzz__SSN__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__SSN__c</fullName>
    <label>SSN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>