force-app/main/default/objects/Account/fields/mass_email_date__c.field-meta.xml
<CustomField>
    <fullName>mass_email_date__c</fullName>
    <label>mass email date</label>
    <type>Date</type>
</CustomField>