force-app/main/default/objects/Account/fields/No_of_family_members__c.field-meta.xml
<CustomField>
    <fullName>No_of_family_members__c</fullName>
    <label>No of family members</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>