force-app/main/default/objects/Account/fields/No_of_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>No_of_Opportunities__c</fullName>
    <label>No of Opportunities</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>