force-app/main/default/objects/Account/fields/No_of_working_members_in_the_family__c.field-meta.xml
<CustomField>
    <fullName>No_of_working_members_in_the_family__c</fullName>
    <label>No of working members in the family</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>