force-app/main/default/objects/Account/fields/NRI_OS_Sourcing_Manager__c.field-meta.xml
<CustomField>
    <fullName>NRI_OS_Sourcing_Manager__c</fullName>
    <label>NRI/OS Sourcing Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DIRECT</fullName>
            </value>
            <value>
                <fullName>Inzimamul Patel</fullName>
            </value>
            <value>
                <fullName>Piyoosh Lalchandani</fullName>
            </value>
            <value>
                <fullName>Virat Vandre</fullName>
            </value>
            <value>
                <fullName>Vivek Makhijani</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>