force-app/main/default/objects/Account/fields/Office_Street__c.field-meta.xml
<CustomField>
    <fullName>Office_Street__c</fullName>
    <label>Locality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>