force-app/main/default/objects/Account/fields/Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name__c</fullName>
    <label>Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>