force-app/main/default/objects/Account/fields/Parents_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Parents_Anniversary__c</fullName>
    <label>Parents Anniversary</label>
    <type>Date</type>
</CustomField>