force-app/main/default/objects/Account/fields/Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Portal_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>