force-app/main/default/objects/Account/fields/Primary_Mobile_No_with_code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mobile_No_with_code__c</fullName>
    <formula>TEXT(Country_Code__c)&amp; (Mobile_No__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Mobile No with code</label>
    <type>Text</type>
</CustomField>