force-app/main/default/objects/Account/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>